--- a/Nucleo-Arduino-Pio/platformio.ini
+++ b/Nucleo-Arduino-Pio/platformio.ini
@@ -12,3 +12,10 @@
 platform = ststm32
 board = nucleo_f767zi
 framework = arduino
+monitor_speed = 9600
+
+[env:uno]
+platform = atmelavr
+board = uno
+framework = arduino
+monitor_speed = 9600
