--- a/Nucleo-Arduino-Pio/platformio.ini
+++ b/Nucleo-Arduino-Pio/platformio.ini
@@ -13,9 +13,17 @@ platform = ststm32
 board = nucleo_f767zi
 framework = arduino
 monitor_speed = 9600
+lib_deps = 
+	adafruit/Adafruit CCS811 Library@^1.1.1
+	adafruit/Adafruit Si7021 Library@^1.5.1
+	adafruit/Adafruit BMP280 Library@^2.6.6
 
 [env:uno]
 platform = atmelavr
 board = uno
 framework = arduino
 monitor_speed = 9600
+lib_deps = 
+	adafruit/Adafruit CCS811 Library@^1.1.1
+	adafruit/Adafruit Si7021 Library@^1.5.1
+	adafruit/Adafruit BMP280 Library@^2.6.6
