--- a/Nucleo-Arduino-Pio/platformio.ini
+++ b/Nucleo-Arduino-Pio/platformio.ini
@@ -17,6 +17,7 @@ lib_deps =
 	adafruit/Adafruit CCS811 Library@^1.1.1
 	adafruit/Adafruit Si7021 Library@^1.5.1
 	adafruit/Adafruit BMP280 Library@^2.6.6
+	closedcube/ClosedCube HDC1080@^1.3.2
 
 [env:uno]
 platform = atmelavr
@@ -27,3 +28,4 @@ lib_deps =
 	adafruit/Adafruit CCS811 Library@^1.1.1
 	adafruit/Adafruit Si7021 Library@^1.5.1
 	adafruit/Adafruit BMP280 Library@^2.6.6
+	closedcube/ClosedCube HDC1080@^1.3.2
