--- a/Nucleo-Arduino-Pio/platformio.ini
+++ b/Nucleo-Arduino-Pio/platformio.ini
@@ -13,7 +13,6 @@ platform = ststm32
 board = nucleo_f767zi
 framework = arduino
 monitor_speed = 9600
-
 lib_deps = 
 	adafruit/Adafruit CCS811 Library@^1.1.1
 	adafruit/Adafruit Si7021 Library@^1.5.1
@@ -22,5 +21,4 @@ lib_deps =
 	adafruit/Adafruit MLX90614 Library@^2.1.3
     adafruit/DHT sensor library@^1.4.4
     adafruit/Adafruit VEML6070 Library@^1.0.6
-
-
+	stm32duino/STM32duino Low Power @ ^1.2.3
