--- a/Nucleo-Arduino-Pio/platformio.ini
+++ b/Nucleo-Arduino-Pio/platformio.ini
@@ -22,3 +22,4 @@ lib_deps =
     adafruit/DHT sensor library@^1.4.4
     adafruit/Adafruit VEML6070 Library@^1.0.6
 	stm32duino/STM32duino Low Power @ ^1.2.3
+	adafruit/Adafruit TCS34725@^1.4.2
