Editing main to send messages to ThingsBoard

--- a/Nucleo-Arduino-Pio/platformio.ini
+++ b/Nucleo-Arduino-Pio/platformio.ini
@@ -19,7 +19,11 @@ lib_deps =
 	adafruit/Adafruit BMP280 Library@^2.6.6
 	closedcube/ClosedCube HDC1080@^1.3.2
 	adafruit/Adafruit MLX90614 Library@^2.1.3
-    adafruit/DHT sensor library@^1.4.4
-    adafruit/Adafruit VEML6070 Library@^1.0.6
+	adafruit/DHT sensor library@^1.4.4
+	adafruit/Adafruit VEML6070 Library@^1.0.6
 	stm32duino/STM32duino Low Power @ ^1.2.3
 	adafruit/Adafruit TCS34725@^1.4.2
+	thingsboard/ThingsBoard@^0.9.7
+	knolleary/PubSubClient@^2.8
+	bportaluri/WiFiEsp@^2.2.2
+	bblanchon/ArduinoJson@6.20.1
