--- a/Nucleo-Arduino-Pio/platformio.ini
+++ b/Nucleo-Arduino-Pio/platformio.ini
@@ -19,6 +19,8 @@ lib_deps =
 	adafruit/Adafruit BMP280 Library@^2.6.6
 	closedcube/ClosedCube HDC1080@^1.3.2
 	adafruit/Adafruit MLX90614 Library@^2.1.3
+	adafruit/Adafruit VEML6070 Library@^1.0.6
+	adafruit/Adafruit TCS34725@^1.4.2
 
 [env:uno]
 platform = atmelavr
